Add easytainer to projects

--- a/public/about/projects/index.html
+++ b/public/about/projects/index.html
@@ -133,6 +133,11 @@ In order to run our distributed architecture at <a href="https://bitspark.de">@b
 
 <p>Logging in to different machines at work or at home and using the same .dotfiles on them. Bootstrap a new machine, even if they are differently flavored. Updating .dotfiles should be a breeze as well as sharing common .dotfiles with your teammates by just installing them next to your own .dotfiles. Lace drew inspiration from brew. - <a href="https://github.com/kairichard/lace">Read more</a></p>
 
+<h3 id="easytainer-cloud">easytainer.cloud</h3>
+
+<p>Easytainer is a serverless docker platform that runs docker images in response to HTTP requests.
+- <a href="https://easytainer.cloud">Read more</a></p>
+
 <h3 id="beautyfiles-net">beautyfiles.net</h3>
 
 <p>As a freelancer I built a web based image archive software for a client. Using several state of the art tools to fulfil the functional specifications which where presented to me. A cascading category based navigation, a lightbox based cart, a live translation tool and a drag and drop image uploader. Moreover there is a full blown admin interface to manage all aspects of the application.</p>
